[package]
name = "rjsdb_storage"
version.workspace = true
edition.workspace = true

[lib]
name = "rjsdb_storage"
path = "lib.rs"

[dependencies]
itertools = "0.14.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serialize = { workspace = true }


[dev-dependencies]
proptest = "1.6.0"
proptest-state-machine = "0.3.1"
